# gambit

./: .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  GNUmakefile  KNOWN_BUGS.md  Makefile  PLAN.md  README.md  config.yaml  defaults.cfg  dev  dev.sh  main.cpp  plan.md  settings.ini  vcpkg.json
.claude/: build  clean  dev  run-client  run-server  settings.json  settings.local.json  test
.claude/skills/clean/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/headless-test/: SKILL.md  run.sh
.claude/skills/pre-commit/: SKILL.md
.claude/skills/remember/: SKILL.md  remember.py
.claude/skills/run-client/: SKILL.md
.claude/skills/run-server/: SKILL.md
.claude/skills/search/: SKILL.md  search.py
.claude/skills/test/: SKILL.md
.claude/skills/visual-test/: SKILL.md  autonomous_test.md  interactive_test.sh  playwright_test.py  run.sh
.github/workflows/: build.yml
.specify/memory/: constitution.md
assets/: items.csv  test_map.tmx
assets/maps/: test_map.tmx  test_map2.tmx  test_map_grid.json
decisions/: ANIMATIONS.md  ENGINE_VS_GAME_SEPARATION.md  INVENTORY.md  MUSIC.md  PROTOCOL.md  RENDERING.md  TEST_COVERAGE.md
include/: Animatable.h  AnimationAssetLoader.h  AnimationClip.h  AnimationController.h  AnimationDirection.h  AnimationSystem.h  Camera.h  CharacterDefinition.h  CharacterRegistry.h  CharacterSelectionState.h  ClientPrediction.h  CollisionDebugRenderer.h  CollisionShape.h  CollisionSystem.h  CombatSystem.h  DamageNumberSystem.h  Effect.h  EffectInstance.h  EffectManager.h  EffectTracker.h  Enemy.h  EnemyInterpolation.h  EnemySpawn.h  EnemySystem.h  EventBus.h  FileSystem.h  GameLoop.h  GameSession.h  GameState.h  GameStateManager.h  GlobalModifiers.h  HeadlessRenderSystem.h  HeadlessUISystem.h  InMemoryChannel.h  InputScript.h  InputSystem.h  Item.h  ItemRegistry.h  Logger.h  MapSelectionState.h  (+29 more)
include/config/: AnimationConfig.h  EffectConfig.h  GameplayConfig.h  NetworkConfig.h  PlayerConfig.h  ScreenConfig.h  TestMode.h  TileConfig.h  TimingConfig.h
include/transport/: ENetServerTransport.h  ENetTransport.h  INetworkTransport.h  IServerTransport.h  InMemoryServerTransport.h  InMemoryTransport.h  StubTransport.h  TransportEvent.h
old_plans/: ANIMATION_SYSTEM_PLAN.md  PLAN_2.md  PLAN_3.md  character-selection-screen.md  combat_system_plan.md  effect-system.md  inventory-pickup-and-equipping.md  map-enhancements-venoxarid.md  music-system-implementation.md  opengl-migration-completed.md  ui_system_plan.md
scripts/: dev.sh  generate_test_sprite.py
specs/: effects_system.md  map_design.md  objectives.md  scoring-and-economy.md
specs/001-wasm-cross-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wasm-cross-platform/checklists/: requirements.md
specs/001-wasm-cross-platform/contracts/: build-targets.cmake  shader-compat.md  transport-interface.h
src/: AnimationAssetLoader.cpp  AnimationController.cpp  AnimationSystem.cpp  CharacterRegistry.cpp  CharacterSelectionState.cpp  ClientPrediction.cpp  CollisionDebugRenderer.cpp  CollisionSystem.cpp  CombatSystem.cpp  DamageNumberSystem.cpp  Effect.cpp  EffectManager.cpp  EffectTracker.cpp  EnemyInterpolation.cpp  EnemySystem.cpp  FileSystem.cpp  GameLoop.cpp  GameSession.cpp  GameStateManager.cpp  HeadlessRenderSystem.cpp  HeadlessUISystem.cpp  InputScript.cpp  InputSystem.cpp  ItemRegistry.cpp  Logger.cpp  MapSelectionState.cpp  MockWindow.cpp  MusicSystem.cpp  MusicZoneDebugRenderer.cpp  NetworkClient.cpp  NetworkProtocol.cpp  NetworkServer.cpp  ObjectiveDebugRenderer.cpp  ObjectiveSystem.cpp  OpenGLUtils.cpp  RemotePlayerInterpolation.cpp  RenderSystem.cpp  ServerGameState.cpp  ServerGameState.cpp.tmp  Settings.cpp  (+13 more)
src/imgui_backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
src/transport/: ENetServerTransport.cpp  ENetTransport.cpp  InMemoryServerTransport.cpp  InMemoryTransport.cpp  StubTransport.cpp
tests/: test_animation_controller.cpp  test_animation_system.cpp  test_client_prediction.cpp  test_collision.cpp  test_eventbus.cpp  test_gameloop.cpp  test_headless_movement.cpp  test_inputsystem.cpp  test_music_system.cpp  test_music_zone.cpp  test_network_protocol.cpp  test_player.cpp  test_remote_player_interpolation.cpp  test_utils.h
tools/map_generator/: EDGE_GUIDE.md  PIXELLAB_INTEGRATION.md  QUICKSTART.md  README.md  add_enemy_spawns.py  add_objectives.py  generate_map.py  generate_venoxarid_batch.py  pixellab_processor.py  test_generated.tmx  tile_analyzer.py  tiles.json  tiles_skeleton.json  tiles_starter.json  tiles_venoxarid_expanded.json  tiles_venoxarid_test.json  tmx_generator.py  venoxarid_manifest_expanded.json  venoxarid_manifest_full.json  venoxarid_manifest_test.json  venoxarid_test_map.tmx  wfc_generator.py
